# tgbot-icetrade

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
bot/: main.py  routes.py  utils.py
bot/commands/: __init__.py  auctions.py  bot_commands.py  help.py  keywords.py  start.py
bot/handlers/: __init__.py  basic.py  callback.py
bot/keyboards/: __init__.py  auctions.py
bot/messages/: __init__.py  article_messages.py  auction_messages.py  scheduler_messages.py
bot/parser/: __init__.py  icetrade_parser.py
bot/scheduler/: __init__.py  auction_scheduler.py
bot/scraper/: __init__.py  icetrade_scraper.py
db/: __init__.py  auction.py  engine.py  user.py
db/migrations/: env.py
db/migrations/versions/: 88ac7f5ca627_add_the_number_of_offers_to_auction.py  baf15a1d38f5_add_link_text_field_to_auction.py  eaf1db268c44_add_tracking_bool_field_to_auction.py  f573ab1c1b44_init.py
