[tool.poetry]
name = "tgbot-icetrade"
version = "0.1.0"
description = ""
authors = ["Viktor Kislyak <viktorkislyak1996@gmail.com>"]
readme = "README.md"
packages = [{include = "tgbot_icetrade"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
alembic = "^1.11.2"
aioschedule = "^0.5.2"
faker = "^19.3.0"
requests = "^2.31.0"
dataclass-wizard = "^0.22.1"
apscheduler = "^3.10.4"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
